# VTX

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  build_sdk.bat  build_sdk.sh  clean.bat  clean.sh  release_sdk.bat  vcpkg.json
benchmarks/: CMakeLists.txt  bench_accessor.cpp  bench_accessor_key_resolution.cpp  bench_cs.cpp  bench_differ.cpp  bench_property_cache.cpp  bench_reader.cpp  bench_reader_ready.cpp  bench_rl.cpp  bench_scenarios.cpp  bench_schema.cpp  bench_utils.h  bench_writer.cpp
benchmarks/fixtures/: .gitignore
samples/: CMakeLists.txt  advance_write.cpp  arena_generated.h  arena_mappings.h  basic_diff.cpp  basic_read.cpp  basic_write.cpp  generate_replay.cpp  post_process_write.cpp  post_processed.vtx  ready_api.cpp
samples/content/reader/arena/: arena_from_fbs_ds.vtx  arena_from_json_ds.vtx  arena_from_proto_ds.vtx
samples/content/writer/cs/: cs_schema.json
samples/content/writer/rl/: rl_schema.json
samples/schemas/: arena_data.fbs  arena_data.proto
sdk/src/: CMakeLists.txt
sdk/src/schemas/: vtx_schema.fbs  vtx_schema.proto
sdk/src/vtx_common/: CMakeLists.txt
sdk/src/vtx_differ/: CMakeLists.txt
sdk/src/vtx_differ/src/vtx/differ/core/: vtx_differ_facade.cpp
sdk/src/vtx_reader/: CMakeLists.txt
sdk/src/vtx_reader/src/vtx/reader/core/: vtx_deserializer_service.cpp  vtx_reader_facade.cpp  vtx_schema_adapter.cpp
sdk/src/vtx_reader/src/vtx/reader/formatters/: flatbuffer_reader_policy.cpp  protobuff_reader_policy.cpp
sdk/src/vtx_writer/: CMakeLists.txt
sdk/src/vtx_writer/src/vtx/writer/core/: vtx_record_pipeline.cpp  (+1 more)
tests/: CMakeLists.txt  README.md
tests/common/: test_binary_loader.cpp  test_bucket_frame.cpp  test_content_hash_edges.cpp  test_flat_array.cpp  test_flat_array_edges.cpp  test_frame_accessor.cpp  test_native_loader.cpp  test_property_address_cache.cpp  test_property_container.cpp  test_schema_registry.cpp  test_schema_registry_errors.cpp  test_time_utils.cpp  test_vtx_game_times.cpp  test_vtx_game_times_extended.cpp  test_vtx_game_times_state.cpp
tests/differ/: test_diff_basic.cpp  test_diff_edges.cpp  test_diff_parametrized.cpp  test_diff_utils.cpp
tests/fixtures/: test_schema.json
tests/reader/: test_corrupt_files.cpp  test_open_replay_edges.cpp  test_reader_api.cpp  test_reader_context.cpp
tests/sanitizer_suppressions/: asan.supp  lsan.supp  tsan.supp  ubsan.supp
tests/util/: test_fixtures.h  test_main.cpp  test_schema_generated.h
tests/writer/: test_frame_post_processor.cpp  test_roundtrip.cpp  test_writer_advanced.cpp  test_writer_basic.cpp  test_writer_edges.cpp
tools/: CMakeLists.txt
tools/cli/: CMakeLists.txt  cli.rc  readme.md
tools/cli/include/commands/: analysis_commands.h  command_helpers.h  command_registry.h  file_commands.h  info_commands.h  inspect_commands.h  navigation_commands.h  session_commands.h
tools/cli/include/core/: cli_concepts.h  cli_engine.h  cli_session.h
tools/cli/include/format/: json_format.h  vtx_type_serializer.h
tools/cli/include/transport/: stdio_transport.h  tcp_transport.h
tools/cli/src/: main.cpp
tools/cli/src/core/: cli_session.cpp
tools/cli/src/format/: json_format.cpp
tools/cli/src/transport/: tcp_transport.cpp
tools/cli/test/: cli_test_suite.py  run_cli_test.bat
tools/inspector/: CMakeLists.txt  inspector.rc  readme.md
tools/inspector/include/: inspector_layout.h  inspector_session.h
tools/inspector/include/services/: analysis_scanner.h  analysis_types.h  entity_inspector_view_service.h  field_type_utils.h  footer_summary_service.h  playback_service.h  reader_chunk_state_service.h  schema_view_service.h  time_display_service.h  timeline_view_service.h
tools/inspector/include/windows/: analysis_window_factory.h  buckets_window.h  chunk_index_window.h  entity_details_window.h  entity_lifetime_window.h  file_info_window.h  reader_inspector_window.h  replay_time_data_window.h  schema_viewer_window.h  timeline_events_window.h  timeline_window.h  track_property_window.h  unique_properties_window.h
tools/inspector/src/: inspector_layout.cpp  inspector_session.cpp  main.cpp
tools/inspector/src/services/: analysis_scanner.cpp  analysis_types.cpp  entity_inspector_view_service.cpp  field_type_utils.cpp  footer_summary_service.cpp  playback_service.cpp  reader_chunk_state_service.cpp  schema_view_service.cpp  time_display_service.cpp  timeline_view_service.cpp
tools/inspector/src/windows/: analysis_window_factory.cpp  buckets_window.cpp  chunk_index_window.cpp  entity_details_window.cpp  entity_lifetime_window.cpp  file_info_window.cpp  reader_inspector_window.cpp  replay_time_data_window.cpp  schema_viewer_window.cpp  timeline_events_window.cpp  timeline_window.cpp  track_property_window.cpp  unique_properties_window.cpp
tools/schema_creator/: CMakeLists.txt  schema_creator.rc
tools/schema_creator/include/: schema_creator_layout.h  schema_creator_session.h
tools/schema_creator/include/services/: schema_creator_service.h
tools/schema_creator/include/windows/: schema_buckets_mapping_window.h  schema_creator_window.h  schema_evolution_window.h  schema_general_info_window.h  schema_validation_window.h
tools/schema_creator/src/: main.cpp  schema_creator_layout.cpp  schema_creator_session.cpp
tools/schema_creator/src/services/: schema_creator_service.cpp
tools/schema_creator/src/windows/: schema_buckets_mapping_window.cpp  schema_creator_window.cpp  schema_evolution_window.cpp  schema_general_info_window.cpp  schema_validation_window.cpp
tools/shared/: CMakeLists.txt
tools/shared/include/gui/: gui_app.h  gui_layer.h  gui_manager.h  gui_scale_controller.h  gui_types.h  gui_window.h
tools/shared/include/logging/: logs_window.h
tools/shared/include/session/: vtx_session_base.h
tools/shared/src/gui/: gui_app.cpp  gui_manager.cpp  gui_scale_controller.cpp  gui_window.cpp
tools/shared/src/logging/: logs_window.cpp
tools/shared/src/session/: vtx_session_base.cpp
(+96 files in other folders)
